Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
   <!-- Chat Kutusu -->
   <div class="chat-wrapper" id="chatWrapper">
     <div class="chat-header">
-      <div>Hurra Türkiye Chat</div>
+      <div> e12Chat</div>
       <div class="chat-status" id="chatStatus">Hazır</div>
     </div>
 
@@ -295,7 +295,7 @@
         setStatus("Hazır");
       } catch (e) {
         addMsg("Bir hata oluştu. Lütfen tekrar deneyin.", "bot");
-        setStatus("Hurra Türkiye Yapay Zeka Sohbet Botu v1.0");
+        setStatus("e12 Yapay Zeka Sohbet Botu v1.0");
         console.error(e);
       } finally {
         isLoading = false;
@@ -312,4 +312,5 @@
   </script>
 
 </body>
+
 </html>
